Se agrego una nueva seccion con texto, se le coloco tipografia (time new roman) y color (verde manzana)

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <div style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; color:chartreuse;"> 
+        <center>Ranitas verdes que saltan alto</center>
+    </div>
     <script>
         alert("Ranitas Verdes!") 
     </script>
